--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -1,13 +1,16 @@
-@import 'element';
+@import 'variables';
+
+@import 'animate';
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
-  --hd-color: #c9dbb2;
-  --hd-hover-color: #bfccb5;
+  --hd-color: #bfccb5;
+  --hd-hover-color: #c9dbb2;
   --hd-click-color: #aac8a7;
   --hd-text: #3c486b;
   --hd-hover-text: #2c344f;
   --hd-yellow: #ffeeb3;
   --hd-bg: #f8f9fa;
+  --hd-disable: #e9edc9;
 }
 
 *,
