用戶列表完成

--- a/src/assets/scss/animate.scss
+++ b/src/assets/scss/animate.scss
@@ -29,3 +29,35 @@
     transform: translateX(30px);
   }
 }
+
+// top-slide-fade
+.top-slide-fade-enter-active {
+  animation: top-slide-in 0.5s ease-in forwards;
+}
+
+.top-slide-fade-leave-active {
+  animation: top-slide-out 0.7s ease-out forwards;
+  opacity: 0;
+  transition: opacity 1s;
+}
+
+@keyframes top-slide-in {
+  from {
+    transition: opacity 1.5s;
+    transform: translateY(-30px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes top-slide-out {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-30px);
+  }
+}
