--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -29,13 +29,13 @@ $colors: (
 
 :root {
   --hd-color: #bfccb5;
-  --hd-hover-color: #c9dbb2;
+  --hd-hover-color: #adbb9b;
   --hd-click-color: #aac8a7;
   --hd-text: #3c486b;
   --hd-hover-text: #2c344f;
   --hd-yellow: #ffeeb3;
   --hd-bg: #f8f9fa;
-  --hd-bg-1: #f4eee0;
+  --hd-bg-1: #ebf0f3;
   --hd-disable: #e9edc9;
 
   // 變更 element plus 主色
