--- a/src/assets/scss/custom/form.scss
+++ b/src/assets/scss/custom/form.scss
@@ -1,5 +1,5 @@
 // form
-.ec-form {
+.hd-form {
   .el-form-item {
     @apply relative pt-7;
   }
@@ -63,5 +63,161 @@
   textarea:-webkit-autofill,
   select:-webkit-autofill {
     -webkit-box-shadow: 0 0 0px 1000px #f4f4f4 inset; //我这里的body背景色是#f8f8f8f
+  }
+}
+
+.custom-form {
+  .el-row {
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+  }
+  .el-form-item {
+    margin-bottom: 1.6rem;
+  }
+
+  .contactor-table {
+    .el-form-item {
+      margin-bottom: 1rem;
+    }
+  }
+
+  .el-form-item.remove-label-width {
+    .el-form-item__label-wrap {
+      margin-right: 0 !important;
+    }
+  }
+
+  &-editable {
+    background-color: var(--form-editable-bg);
+
+    .el-divider__text {
+      background-color: var(--form-editable-bg);
+    }
+  }
+
+  &-view {
+    background-color: var(--form-view-bg);
+
+    .el-divider__text {
+      background-color: var(--form-view-bg);
+    }
+  }
+
+  // .el-input-number {
+  //   width: 70%;
+  // }
+  .el-input-number {
+    width: 100%;
+  }
+
+  .el-input-number.is-controls-right {
+    .el-input-number__increase,
+    .el-input-number__decrease {
+      border: none !important;
+      background-color: transparent;
+    }
+  }
+
+  .w-full-date {
+    width: 100%;
+
+    .el-input__wrapper {
+      width: 100%;
+    }
+  }
+
+  .w-full-select {
+    width: 100%;
+  }
+}
+
+.input-rate.el-input-number {
+  width: 100%;
+}
+
+.w-full-cascader {
+  width: 100%;
+
+  .el-cascader {
+    width: 100%;
+  }
+}
+
+.el-form {
+  .el-cascader:not(.is-disabled):hover .el-input__wrapper {
+    box-shadow: none !important;
+  }
+}
+
+.w-full-date {
+  width: 100%;
+
+  .el-input__wrapper {
+    width: 100%;
+  }
+
+  .el-date-editor.el-input {
+    width: 100%;
+  }
+}
+
+.date-bg-style {
+  .el-date-editor.el-input__inner {
+    box-shadow: none !important;
+  }
+}
+
+.custom-input-bg-style {
+  .is-guttered {
+    padding: 0;
+  }
+
+  .el-col {
+    width: 100%;
+  }
+
+  .el-input__wrapper {
+    box-shadow: none;
+    background-color: var(--form-input-bg) !important;
+  }
+}
+
+.custom-input-bg-style.el-input.is-disabled {
+  .el-input__wrapper {
+    box-shadow: none !important;
+  }
+}
+
+.el-textarea.is-disabled .el-textarea__inner,
+.custom-input-bg-style .el-input.is-disabled {
+  .el-input__wrapper {
+    box-shadow: none !important;
+  }
+}
+
+.custom-form {
+  .el-textarea.is-disabled .el-textarea__inner,
+  .el-input.is-disabled .el-input__inner {
+    color: var(--primary-text-color) !important;
+  }
+
+  .link-input.el-input.is-disabled .el-input__inner {
+    color: var(--el-color-primary) !important;
+  }
+
+  .el-textarea__inner:focus,
+  .el-input__wrapper.is-focus,
+  .el-cascader .el-input.is-focus .el-input__wrapper {
+    box-shadow: 0px 0px 5px var(--hd-color) !important;
+  }
+
+  .el-form-item.is-error .el-input__wrapper {
+    box-shadow: 0 0 5px var(--el-color-danger) !important;
+  }
+
+  .alert-currency .el-input__wrapper {
+    .el-input__inner {
+      color: #f36666 !important;
+    }
   }
 }
