--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -49,7 +49,7 @@ $colors: (
   --table-expand-row-bg: #f8fbff !important;
   --table-expand-hover-row-bg: #c8c8c8 !important;
   --search-input-bg: rgba(232, 240, 254, 0.6) !important;
-  --form-input-bg: #d2dade !important;
+  --form-input-bg: #cfd4d785 !important;
   --form-view-bg: #aac8a7 !important;
   --el-border-radius-base: 8px !important;
   --el-border-color-extra-light: #b3dff4 !important;
