--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -7,7 +7,7 @@
 *::after {
   box-sizing: border-box;
   margin: 0;
-  position: relative;
+  // position: relative;
   font-weight: normal;
   // color: var(--hd-text);
 }
