--- a/src/assets/scss/custom/dropDown.scss
+++ b/src/assets/scss/custom/dropDown.scss
@@ -2,4 +2,8 @@
   display: flex !important;
   flex-direction: column !important;
   gap: 10px !important;
+  padding: 4px !important;
+}
+.el-dropdown-menu__item {
+  border-radius: var(--el-border-radius-base) !important;
 }
