--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -37,7 +37,7 @@ $colors: (
   --hd-yellow: #ffeeb3;
   --hd-bg: #f8f9fa;
   --hd-bg-1: #ebf0f3;
-  --hd-disable: #e9edc9;
+  --hd-disable: #e7e7e7;
 
   // 變更 element plus 主色
   --el-color-primary: #bfccb5 !important;
