--- a/src/assets/scss/custom/button.scss
+++ b/src/assets/scss/custom/button.scss
@@ -35,3 +35,12 @@
   --el-button-disabled-bg-color: var(--hd-disable) !important;
   --el-button-disabled-border-color: var(--hd-disable) !important;
 }
+.el-button--default {
+  --el-button-hover-bg-color: var(--hd-hover-color) !important;
+  --el-button-hover-border-color: var(--hd-hover-color) !important;
+  --el-button-hover-text-color: #fff !important;
+  --el-button-active-bg-color: var(--hd-click-color) !important;
+  --el-button-active-border-color: var(--hd-click-color) !important;
+  --el-button-disabled-bg-color: var(--hd-disable) !important;
+  --el-button-disabled-border-color: var(--hd-disable) !important;
+}
