--- a/src/assets/scss/custom/dialog.scss
+++ b/src/assets/scss/custom/dialog.scss
@@ -21,6 +21,24 @@
   .el-result__icon svg {
     --el-result-icon-font-size: 70px;
   }
+
+  // 關閉按鈕
+  .el-dialog__headerbtn {
+    @apply center absolute -right-[10px] -top-[10px] z-[100] flex h-auto w-auto
+      rounded-[12px] p-2 text-hd-dark-50 duration-150;
+    box-shadow: 0 5px 20px 0 var(--hd-shadow) !important;
+    background-color: var(--hd-bg-1);
+    &:hover {
+      box-shadow: 0 0 4px 0 var(--hd-shadow);
+      transform: translate(-2px, 2px);
+      .el-icon {
+        @apply text-hd-dark;
+      }
+    }
+    .el-icon {
+      @apply h-[22px] w-[22px] text-hd-dark-50 duration-150;
+    }
+  }
 }
 
 .custom-dialog-body {
@@ -65,62 +83,8 @@
   }
 }
 
-.rank-dialog {
-  @apply w-[90%] xl:w-[50%];
-  border-radius: 8px;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -ms-border-radius: 8px;
-  -o-border-radius: 8px;
-
-  .el-result {
-    --el-result-padding: 24px 12px;
-  }
-
-  .el-result__title {
-    --el-result-title-margin-top: 12px;
-  }
-
-  .el-result__extra {
-    --el-result-extra-margin-top: 12px;
-  }
-
-  .el-result__icon svg {
-    --el-result-icon-font-size: 70px;
-  }
-}
-
-.rank-dialog-body {
-  .el-dialog__body {
-    padding-top: 0 !important;
-    padding-bottom: 0 !important;
-  }
-
-  .el-dialog__header {
-    padding-top: 6px !important;
-    padding-bottom: 0 !important;
-    padding-right: 0 !important;
-  }
-}
-
-// 關閉按鈕
-.el-dialog__headerbtn {
-  @apply -right-[6px] -top-[6px] z-[100] flex h-auto w-auto rounded-[12px] text-black/50 duration-150;
-  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.1) !important;
-  background-color: #fff;
-  &:hover {
-    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
-    transform: translate(-2px, 2px);
-    .el-icon {
-      @apply text-black;
-    }
-  }
-  .el-icon {
-    @apply h-[34px] w-[34px] text-black/50 duration-150;
-  }
-}
 // 底部按鈕
-.el-dialog__body footer {
+.custom-dialog-body footer {
   justify-content: flex-end !important;
   .el-button {
     @apply relative border-0;
@@ -151,7 +115,7 @@
     }
   }
   .el-button--primary {
-    @apply text-hd-primary relative border-0 bg-transparent;
+    @apply relative border-0 bg-transparent text-hd-primary;
     span {
       z-index: 1;
     }
@@ -176,5 +140,30 @@
     &:focus {
       @apply text-hd-primary;
     }
+  }
+}
+
+.dialog-fade-enter-active {
+  .el-dialog {
+    animation: dialog-open 0.3s cubic-bezier(0.32, 0.14, 0.15, 0.86);
+  }
+}
+
+.dialog-fade-leave-active {
+  animation: fade-out 0.2s linear;
+  .el-dialog {
+    animation: dialog-close 0.2s cubic-bezier(0.78, 0.14, 0.15, 0.86);
+  }
+}
+
+.fade-in-linear-enter-active {
+  .el-message-box {
+    animation: dialog-open 0.2s cubic-bezier(0.32, 0.14, 0.15, 0.86);
+  }
+}
+
+.fade-in-linear-leave-active {
+  .el-message-box {
+    animation: dialog-close 0.2s cubic-bezier(0.78, 0.14, 0.15, 0.86);
   }
 }
