--- a/src/assets/scss/custom/menu.scss
+++ b/src/assets/scss/custom/menu.scss
@@ -1,19 +1,56 @@
 .el-menu {
-  --el-menu-base-level-padding: 14px !important;
-}
-
-.el-menu,
-.el-menu * {
-  background-color: var(--hd-bg-1) !important;
+  --el-menu-hover-bg-color: none;
+  --el-menu-bg-color: var(--hd-bg-1) !important;
+  // --el-menu-base-level-padding: 14px !important;
+  --el-menu-item-height: 44px !important;
+  --el-menu-sub-item-height: 44px !important;
 }
 
 .el-menu--popup {
+  border-radius: 0.5rem !important;
+  padding: 0px !important;
   min-width: 120px;
   * {
-    color: var(--hd-white-50) !important;
+    color: var(--hd-text-50);
+  }
+  .el-menu-item {
+    @apply rounded-md;
+    &:hover {
+      @apply text-hd-primary-hover;
+      span,
+      svg,
+      * {
+        @apply text-hd-primary-hover;
+      }
+    }
+    &.is-active {
+      @apply text-hd-white;
+      background-color: var(--hd-primary-hover) !important;
+      span,
+      svg,
+      * {
+        @apply text-hd-white;
+      }
+    }
   }
 }
-
-.el-menu--collapse .el-sub-menu__icon-arrow {
-  @apply hidden;
+.el-menu--collapse {
+  .el-sub-menu__icon-arrow {
+    // --el-menu-base-level-padding: 18px !important;
+    @apply hidden;
+  }
+}
+.el-menu-item .el-menu-tooltip__trigger,
+.el-menu-item,
+.el-sub-menu__title {
+  padding: 0 12px !important;
+}
+.el-menu--inline {
+  .el-menu-item .el-menu-tooltip__trigger,
+  .el-menu-item,
+  .el-sub-menu__title {
+    padding-left: calc(
+      var(--el-menu-base-level-padding) + var(--el-menu-level) * var(--el-menu-level-padding)
+    ) !important;
+  }
 }
