--- a/src/assets/scss/custom/table.scss
+++ b/src/assets/scss/custom/table.scss
@@ -1,33 +1,24 @@
-$hoverBg: #e2e4df1e;
-$rowBg: #101110;
-$darkColor: #ffffff;
-
-.el-table .sort-caret.ascending {
-  border-bottom-color: $darkColor;
-}
-
-.el-table .sort-caret.descending {
-  border-top-color: $darkColor;
-}
+$darkColor: #252525;
 
 .default-table {
-  --el-border-color-lighter: transparent;
-  --el-table-bg-color: $rowBg;
+  --el-bg-color: var(--hd-bg-1) !important;
+  --el-fill-color-blank: var(--hd-bg-1) !important;
   .el-table__header-wrapper {
-    border-bottom: 1px solid var(--hd-white);
+    border-bottom: 1px solid var(--hd-text);
   }
-  .el-table-fixed-column--right {
-    // --el-bg-color: $rowBg;
-  }
+}
+
+.el-table__body .el-table__cell {
+  border-right: 0px !important;
 }
 
 .default-table.el-table--enable-row-hover .el-table__body tr:hover > td {
-  background-color: $hoverBg !important;
+  background-color: var(--hd-bg-50) !important;
 }
 
 // fixed right
 .default-table .el-table__body .el-table__row.hover-row td {
-  background-color: $hoverBg !important;
+  background-color: var(--hd-bg-50) !important;
 }
 
 .default-table.el-table--enable-row-hover .el-table__body tr:hover {
@@ -36,25 +27,19 @@ $darkColor: #ffffff;
   }
 }
 
-.default-table.el-table .row-bg {
-  --el-table-tr-bg-color: $rowBg;
-
-  // fixed right
-  td.el-table-fixed-column--right {
-    background-color: $rowBg;
-  }
-}
 .default-table.el-table .row-bg--total {
   --el-table-tr-bg-color: var(--el-border-color-extra-light);
 }
-
+.default-table.el-table .row-bg {
+  --el-table-tr-bg-color: var(--table-row-bg);
+}
 .default-table.el-table .expand-row-bg {
   --el-table-tr-bg-color: var(--table-expand-row-bg);
 }
 
-.default-table.el-table .row-bg-alert {
-  --el-table-tr-bg-color: #fef5f5;
-}
+// .default-table.el-table .row-bg-alert {
+//   --el-table-tr-bg-color: #fef5f5;
+// }
 
 .default-table {
   .action-buttons {
@@ -63,39 +48,35 @@ $darkColor: #ffffff;
     }
   }
 
-  // .row-expand-cover .el-table__expand-icon {
-  //     visibility: hidden !important;
-  // }
-
   .el-table__expand-column .cell {
     .el-table__expand-icon--expanded {
-      color: #ffffff;
+      color: #252525;
       transform: rotate(-180deg);
     }
 
     .el-table__expand-icon {
       .el-icon {
-        color: #ffffff;
+        color: #252525;
         transform: rotate(90deg);
       }
     }
   }
 
   .el-table__footer-wrapper tbody td.el-table__cell {
-    background-color: #f3f4f6 !important;
+    background-color: var(--hd-bg-1) !important;
     border-top: 1px solid #e5e7eb;
     border-bottom: 1px solid #e5e7eb;
     padding: 2px 0;
   }
 
   .el-table .el-table__footer-wrapper .cell {
-    background-color: #f3f4f6 !important;
+    background-color: var(--hd-bg-1) !important;
   }
 
   .el-table__footer-wrapper .cell {
     text-align: right;
     font-weight: 500;
-    color: #ffffff;
+    color: #6b7280;
   }
 }
 
@@ -121,16 +102,10 @@ $darkColor: #ffffff;
   }
 }
 
+// header
 .default-table th.el-table__cell {
-  background-color: #101110;
   .cell {
-    color: #ffffff;
-    .sort-caret.ascending {
-      border-bottom-color: #ffffff !important;
-    }
-    .sort-caret.descending {
-      border-top-color: #ffffff !important;
-    }
+    color: var(--hd-text);
   }
 }
 
