--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -7,51 +7,35 @@
 @use './custom/menu.scss' as *;
 @use './custom/dialog.scss' as *;
 @use './custom/notification.scss' as *;
-@use './custom/tag.scss' as *;
-@use './custom/breadcrumb.scss' as *;
+@use './custom/draggable.scss' as *;
+@use './custom/button.scss' as *;
+@use './custom/loading.scss' as *;
+// @import './custom/table.scss';
 
-@import './custom/button.scss';
-$colors: (
-  'primary': (
-    'base': #aac8a7,
-  ),
-  'success': (
-    'base': #bfccb5,
-  ),
-  'warning': (
-    'base': #ffeeb3,
-  ),
-  'danger': (
-    'base': #ff4949,
-  ),
-  'error': (
-    'base': #f36666,
-  ),
-  'info': (
-    'base': #b7b7b7,
-  ),
-);
-
-:root {
-  --hd-primary: #bfccb5;
-  --hd-primary-hover: #adbb9b;
-  --hd-primary-active: #aac8a7;
+:root:root {
+  // 變量
+  //---------------------------------------------
+  --hd-primary: #289983;
+  --hd-primary-hover: #46b59f;
+  --hd-primary-active: #27816f;
   --hd-secondary: #6c757d;
-  --hd-success: #52c980;
-  --hd-danger: #d14654;
+  --hd-success: #a7c957;
+  --hd-danger: #ee3d6f;
   --hd-warning: #ffeeb3;
   --hd-info: #45bbcd;
   --hd-light: #f8f9fa;
   --hd-text: #3c486b;
   --hd-text-50: #2c344f;
   --hd-dark: #343a40;
-  --hd-dark-50: #4b535b;
+  --hd-dark-50: #798189;
   --hd-white: #ffffff;
-  --hd-white-50: #ffffffb5;
-  --hd-disable: #e7e7e7;
+  --hd-white-50: #f1f1f1;
+  --hd-disable: color-mix(in srgb, var(--hd-dark) 10%, transparent);
   --hd-border: #dfdfdf;
-  --hd-bg: #101110;
-  --hd-bg-1: #242424;
+  --hd-bg: #e8eaeb;
+  --hd-bg-1: #ffffff;
+  --hd-bg-50: rgb(240, 239, 239);
+  --hd-shadow: rgba(0, 0, 0, 0.1);
   // font
   --font-h1: 40px;
   --font-h2: 32px;
@@ -64,67 +48,46 @@ $colors: (
   --font-samll: 14px;
 
   // 變更 element plus 主色
-  --el-color-primary: #bfccb5 !important;
-  --blue-primary-50: #f8fbff !important;
-  --blue-primary-100: #e3f1ff !important;
-  --blue-primary-400: #464f5e !important;
-  --blue-primary-500: #aac8a7 !important;
-  --table-row-bg: #101110 !important;
-  --table-expand-row-bg: #101110 !important;
-  --table-expand-hover-row-bg: #c8c8c8 !important;
-  --search-input-bg: rgba(232, 240, 254, 0.6) !important;
-  --form-input-bg: #cfd4d785 !important;
-  --form-view-bg: #aac8a7 !important;
-  --el-border-radius-base: 8px !important;
-  --el-border-color-extra-light: #b3dff4 !important;
-  --el-color-danger: #f36666 !important;
-  --el-color-success: #aac8a7 !important;
-  --el-color-warning: #ffeeb3 !important;
-  --el-color-info: #b7b7b7 !important;
-  --primary-text-color: #252525 !important;
-  --form-editable-bg: #e3eada !important;
-  --el-disabled-bg-color: #ececec !important;
-  --el-menu-hover-bg-color: none !important;
-  --el-menu-hover-text-color: #c9dbb2 !important;
-  --el-bg-color-overlay: #242424 !important;
+  --el-color-primary: var(--hd-primary);
+  --el-color-danger: var(--hd-danger);
+  --el-color-success: var(--hd-success);
+  --el-color-warning: var(--hd-warning);
+  --el-color-info: var(--hd-info);
+  --primary-text-color: var(--hd-dark);
+  --blue-primary-500: var(--hd-primary);
+  --table-row-bg: var(--hd-primary);
+  --table-expand-row-bg: var(--hd-bg);
+  --form-view-bg: var(--hd-primary);
+  --el-border-radius-base: 8px;
+  --el-disabled-bg-color: var(--hd-disable);
+  --el-bg-color: var(--hd-bg-1);
+  --el-bg-color-overlay: var(--hd-bg-1);
+  --el-color-primary-light-9: var(--hd-white-50);
+  --el-fill-color-light: var(--hd-white-50);
+  --el-mask-color: color-mix(in srgb, var(--hd-white) 60%, transparent);
+}
+
+:root.dark {
+  --hd-light: #343a40;
+  --hd-text: #ffffff;
+  --hd-text-50: #ffffff82;
+  --hd-dark: #cfd3dc;
+  --hd-dark-50: #ffffff82;
+  --hd-white: #343a40;
+  --hd-white-50: #4b535b;
+  --hd-border: #ececec;
+  --hd-bg: #1d1e20;
+  --hd-bg-1: #141414;
+  --hd-bg-50: #393a3c;
+  --el-text-color-primary: #ffffff;
+  --hd-shadow: rgba(255, 255, 255, 0.323);
+  --el-mask-color: color-mix(in srgb, var(--hd-white) 30%, transparent);
 }
 
 .center {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-// badge
-.el-input__wrapper {
-  background-color: transparent !important;
-  box-shadow: none !important;
-}
-
-.el-loading-spinner {
-  background: url('/logo.png') no-repeat;
-  background-size: 8rem 9rem;
-  background-position: 50% 50%;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  top: 0 !important;
-  text-align: center;
-  animation: bounce 2s infinite;
-}
-
-.el-loading-spinner .el-loading-text {
-  margin: 3px 0;
-  font-size: 1.5rem;
-  position: absolute;
-  top: 60%;
-}
-.el-loading-spinner .circular {
-  display: none !important;
 }
 
 .el-drawer__body {
